# Urho3DGameLoader

./: .gitignore  CMakeLists.txt
Resources/: allGamelist.json  gamelist1.json  gamelist2.json  recentGamelist.json  videolist0.json
Resources/Materials/: TVmaterialGPUYUV.1.xml
Resources/Shaders/GLSL/: Theora.1.glsl
Resources/Techniques/: DiffUnlitTheoraVideoYUV444.1.xml
Resources/localization/: StringsCnEn.json
Resources/screens/: GameSetting.xml  Home.xml  IOTest.xml  KeySetting.xml  ScreenBase.xml  Settings.xml  Wifi.xml  home.xml
cmake/Modules/: UrhoCommon.cmake
src/: Global.cpp  Global.h  HelloGUI.cpp  HelloGUI.h  InputSystem.cpp  InputSystem.hpp  MainControl.cpp  MainControl.hpp  MainControl.inl  Sample.inl  Settings.cpp  Settings.hpp  Sprites.cpp  Urho3DAll.h
src/DP/: Factory.hpp
src/components/: VideoPlayerComponent.cpp  VideoPlayerComponent.hpp
src/screens/: GameSettingScreen.cpp  GameSettingScreen.hpp  HomeScreen.cpp  HomeScreen.hpp  IOTestScreen.cpp  IOTestScreen.hpp  KeySettingScreen.cpp  KeySettingScreen.hpp  Screen.cpp  Screen.hpp  ScreenBuilder.hpp  ScreenManager.cpp  ScreenManager.hpp  SettingsScreen.cpp  SettingsScreen.hpp  WifiScreen.cpp  WifiScreen.hpp
src/subsystems/: InputSystem.cpp  InputSystem.hpp  Machine.cpp  Machine.hpp  Settings.cpp  Settings.hpp
src/utils/: log.cpp  log.hpp  log.inl  string.hpp  string.inl  type.cpp  type.hpp  type.inl  util.hpp  util.inl
src/widgets/: BlinkText.cpp  BlinkText.hpp  FlashText.cpp  FlashText.hpp  Gamelist.cpp  Gamelist.hpp  ImageSelectMenuItem.cpp  ImageSelectMenuItem.hpp  JoystickDir.cpp  JoystickDir.hpp  JoystickKey.cpp  JoystickKey.hpp  KeyBoard.cpp  KeyBoard.hpp  Keyboard.cpp  Keyboard.hpp  MenuBar.cpp  MenuBar.hpp  MenuItem.cpp  MenuItem.hpp  NormalMenuItem.cpp  NormalMenuItem.hpp  PageIndicator.cpp  PageIndicator.hpp  SearchEdit.cpp  SearchEdit.hpp  SelectMenuItem.cpp  SelectMenuItem.hpp  TabSelector.cpp  TabSelector.hpp  TextSelectMenuItem.cpp  TextSelectMenuItem.hpp  VideoPlayer.cpp  VideoPlayer.hpp  Widget.cpp  Widget.hpp  WifiList.cpp  WifiList.hpp
test/: CMakeLists.txt  Global.cpp  Global.h  MainControl.cpp  MainControl.hpp  test.cpp
test/subsystems/: InputSystem.cpp  InputSystem.hpp
